src-ken&y/objects/MRP__c.object
<CustomObject>
    <customHelpPage>HelpMRP</customHelpPage>
    <description>MRP supply/demand/planned information</description>
    <fields>
        <fullName>Balance__c</fullName>
        <description>Item&apos;s quantity balance</description>
        <inlineHelpText>Inventory balance. If the balance is negative, MRP suggests an action (make or buy) to increase the balance to zero or greater to cover demand.</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>MRPs</relationshipLabel>
        <relationshipName>MRPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demand__c</fullName>
        <description>Demand</description>
        <label>Demand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Facility_Item</description>
        <inlineHelpText>Lookup to Facility_Item</inlineHelpText>
        <label>Facility Item</label>
        <referenceTo>Facility_Item__c</referenceTo>
        <relationshipLabel>MRPs</relationshipLabel>
        <relationshipName>MRPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Facility of this order/supply</description>
        <inlineHelpText>MRP can be run at the company or facility level.  If run at the facility level, MRP only looks at the supply and demand for the selected facility.</inlineHelpText>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>MRPs</relationshipLabel>
        <relationshipName>MRPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Demand__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a demand record or supply</description>
        <inlineHelpText>Indicates this is demand (not supply).</inlineHelpText>
        <label>Is Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Item</description>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>MRPs</relationshipLabel>
        <relationshipName>MRPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <formula>Item__r.Lead_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lead time for the selected item. Lead time is defined on the item record.</inlineHelpText>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <formula>Item__r.Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MRP uses the BOM on each item spec to calculate the net-material requirements for every component item and sub-assembly. The level indicates the item level within the BOM. If the item appears on multiple BOMs, the level indicates its lowest position.</inlineHelpText>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRP_Need_Date__c</fullName>
        <description>MRP need date or reschedule date</description>
        <label>MRP Need Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MRP_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to MRP_Run</description>
        <inlineHelpText>Lookup to MRP_Run</inlineHelpText>
        <label>MRP Run</label>
        <referenceTo>MRP_Run__c</referenceTo>
        <relationshipLabel>MRPs</relationshipLabel>
        <relationshipName>MRPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MRP_Unique__c</fullName>
        <description>External Unique ID for creating/linking planned records</description>
        <externalId>true</externalId>
        <inlineHelpText>External Unique ID for creating/linking planned records</inlineHelpText>
        <label>MRP Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Make_Buy__c</fullName>
        <formula>IF( ISBLANK(Facility_Item__c), Text(Item__r.Source__c), Text(Facility_Item__r.Source__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Make/Buy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Tracking</label>
        <referenceTo>Material_Tracking__c</referenceTo>
        <relationshipLabel>MRPs</relationshipLabel>
        <relationshipName>MRPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modified_Quantity__c</fullName>
        <description>Modified Quantity</description>
        <inlineHelpText>The balance remaining on a planned order after you create a work order or purchase order.</inlineHelpText>
        <label>Modified Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_to_Balance__c</fullName>
        <formula>IF( Is_Demand__c ,  -Modified_Quantity__c , Modified_Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Demand minus Modified Quantity.</inlineHelpText>
        <label>Net to Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Level_Item_Specification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Level Item Specification</label>
        <referenceTo>Item_Specification__c</referenceTo>
        <relationshipLabel>MRPs</relationshipLabel>
        <relationshipName>MRPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Level_MRP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to MRP</description>
        <inlineHelpText>Lookup to MRP</inlineHelpText>
        <label>Next Level MRP</label>
        <referenceTo>MRP__c</referenceTo>
        <relationshipLabel>MRPs</relationshipLabel>
        <relationshipName>MRPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Forecast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Order Forecast</description>
        <inlineHelpText>Lookup to Order Forecast</inlineHelpText>
        <label>Order Forecast</label>
        <referenceTo>Order_Forecast__c</referenceTo>
        <relationshipLabel>MRPs</relationshipLabel>
        <relationshipName>MRPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Order Line for Transfer Order cases</description>
        <label>Order Line</label>
        <referenceTo>Order_Line__c</referenceTo>
        <relationshipLabel>MRPs</relationshipLabel>
        <relationshipName>MRPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked this record is an MRP planned order</description>
        <inlineHelpText>If selected, indicates that this is an MRP planned order</inlineHelpText>
        <label>Planned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Line</label>
        <referenceTo>Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>MRPs</relationshipLabel>
        <relationshipName>MRPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Date__c</fullName>
        <description>Required Date</description>
        <label>Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>MRPs</relationshipLabel>
        <relationshipName>MRPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <inlineHelpText>Refer to the item&apos;s demand and balance in sequence to see the projected inventory balance. For example: &quot;&quot;Item 10 | Sequence 1 | Demand = 100 | Balance = -100</inlineHelpText>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Where_Required__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Where is the demand or supply coming from ?</description>
        <inlineHelpText>The SKID that will consume the demand.</inlineHelpText>
        <label>Where Required</label>
        <referenceTo>SKID__c</referenceTo>
        <relationshipLabel>MRPs</relationshipLabel>
        <relationshipName>MRPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>MRPs</relationshipLabel>
        <relationshipName>MRPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MRP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MRP_Run__c</columns>
        <columns>Company__c</columns>
        <columns>Facility__c</columns>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Demand__c</columns>
        <columns>Is_Demand__c</columns>
        <columns>Planned__c</columns>
        <columns>Next_Level_Item_Specification__c</columns>
        <columns>Quantity__c</columns>
        <columns>Required_Date__c</columns>
        <columns>MRP_Need_Date__c</columns>
        <columns>Where_Required__c</columns>
        <columns>Modified_Quantity__c</columns>
        <columns>Balance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Planned_Purchase_Orders</fullName>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Quantity__c</columns>
        <columns>Modified_Quantity__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Required_Date__c</columns>
        <columns>Company__c</columns>
        <columns>Is_Demand__c</columns>
        <columns>Demand__c</columns>
        <columns>Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Planned__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Make_Buy__c</field>
            <operation>equals</operation>
            <value>Purchased</value>
        </filters>
        <label>Planned Purchase Orders</label>
    </listViews>
    <listViews>
        <fullName>Planned_Work_Orders</fullName>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Quantity__c</columns>
        <columns>Modified_Quantity__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Required_Date__c</columns>
        <columns>Company__c</columns>
        <columns>Is_Demand__c</columns>
        <columns>Demand__c</columns>
        <columns>Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Planned__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Make_Buy__c</field>
            <operation>equals</operation>
            <value>Manufactured</value>
        </filters>
        <label>Planned Work Orders</label>
    </listViews>
    <nameField>
        <displayFormat>MRP-{0000000000}</displayFormat>
        <label>MRP</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MRPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>